--- a/templates/reset_successful.html
+++ b/templates/reset_successful.html
@@ -39,9 +39,14 @@
         .alert-heading {
             margin-top: 0;
         }
+        .btn-primary:hover {
+            background-color: #218838;
+            border-color: #1e7e34;
+        }
         .btn-primary {
             border-radius: 20px;
             padding: 12px 20px;
+            background-color: #28a745;
         }
     </style>
 </head>
