--- a/templates/main.html
+++ b/templates/main.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <style>
+        
         .navbar-container {
             max-width: 1200px;
             margin: 0 auto;
@@ -23,11 +25,26 @@
             border-radius: 5px;
         }
 
-        .navbar .home-image,
+        .navbar .home-image {
+            width: 40px;
+            height: 40px;
+            cursor: pointer;
+        }
+
         .navbar .logo {
             width: 40px;
             height: 40px;
             cursor: pointer;
+            margin-left: 20px; /* Add space between the home image and the logo */
+        }
+
+        .navbar .logo-text {
+            margin-left: 10px;
+            font-size: 1.5em;
+            font-weight: bold;
+            color: #007bff;
+            display: inline-block;
+            vertical-align: middle;
         }
 
         .navbar .user-info {
@@ -176,6 +193,7 @@
             <div class="left-section">
                 <img src="{{ url_for('static', filename='images/home.jpg') }}" alt="Home" class="home-image" title="My Home" onclick="location.href='{{ url_for('main') }}'">
                 <img src="{{ url_for('static', filename='images/logo.jpg') }}" alt="Logo" class="logo">
+                <span class="logo-text">MeCipher</span>
             </div>
             <div class="user-info" onclick="toggleDropdown()">
                 <div class="user-initials">{{ user_initials }}</div>
@@ -198,8 +216,8 @@
             </div>
             <div class="center-section">
                 <div class="button-group">
-                    <button onclick="location.href='#'">Encrypt</button>
-                    <button onclick="location.href='#'">Decrypt</button>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#encryptModal">Encrypt</button>
+                    <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#decryptModal">Decrypt</button>
                 </div>
             </div>
             <div class="right-section">
@@ -214,19 +232,188 @@
         <p>Powered by INNOSTAR GROUP LT.</p>
     </div>
 
-    <script>
-        function toggleDropdown() {
-            var dropdown = document.querySelector('.dropdown-menu');
-            dropdown.style.display = dropdown.style.display === 'block' ? 'none' : 'block';
+   <!-- Encrypt Modal -->
+   <div class="modal fade" id="encryptModal" tabindex="-1" aria-labelledby="encryptModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="encryptModalLabel">Enter the message to Encrypt</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div id="encryptStep1">
+                    <input type="text" id="messageToEncrypt" class="form-control" placeholder="Type your message here">
+                    <button type="button" class="btn btn-primary mt-3" onclick="encryptMessage()">Encrypt</button>
+                </div>
+                <div id="encryptStep2" class="d-none">
+                    <p>Your cipher key: <span id="generatedCipherKey"></span></p>
+                    <button type="button" class="btn btn-secondary" onclick="copyCipherKey()">Copy Cipher Key</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Decrypt Modal -->
+<div class="modal fade" id="decryptModal" tabindex="-1" aria-labelledby="decryptModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="decryptModalLabel">Enter the cipher key to Decrypt</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <input type="text" id="cipherKeyToDecrypt" class="form-control" placeholder="Enter your cipher key here">
+                <button type="button" class="btn btn-primary mt-3" onclick="decryptMessage()">Decrypt</button>
+                <div id="decryptedMessage" class="mt-3"></div>
+                <button id="copyDecryptedMessageButton" type="button" class="btn btn-secondary mt-3" onclick="copyDecryptedMessage()" style="display:none;">Copy Decrypted Message</button>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Toastr CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+
+<!-- JQuery -->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<!-- Bootstrap JS -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+ <!-- Toastr JS -->
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+ 
+ 
+ <script>
+    function encryptMessage() 
+    {
+        const message = document.getElementById('messageToEncrypt').value;
+        if (!message) {
+            toastr.warning('Please enter a message to encrypt.');
+            return;
         }
 
-        document.addEventListener('click', function (event) {
-            var isClickInside = document.querySelector('.user-info').contains(event.target);
-            if (!isClickInside) {
-                document.querySelector('.dropdown-menu').style.display = 'none';
+        const cipherKey = Math.random().toString(36).substr(2, 10);
+        document.getElementById('generatedCipherKey').textContent = cipherKey;
+
+        fetch('/store-encrypted-message', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({ message, cipherKey })
+        }).then(response => {
+            if (response.ok) {
+                document.getElementById('encryptStep1').classList.add('d-none');
+                document.getElementById('encryptStep2').classList.remove('d-none');
+                toastr.success('Message encrypted successfully.');
+            } else {
+                toastr.error('Failed to store the encrypted message.');
             }
         });
-    </script>
+    }
+
+    function decryptMessage() 
+    {
+        const cipherKey = document.getElementById('cipherKeyToDecrypt').value;
+        if (!cipherKey) {
+            toastr.warning('Please enter a cipher key to decrypt.');
+            return;
+        }
+
+        fetch(`/decrypt-message?cipherKey=${cipherKey}`)
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Failed to decrypt message.');
+                }
+                return response.json();
+            })
+            .then(data => {
+                if (data.message) {
+                    document.getElementById('decryptedMessage').textContent = data.message;
+                    document.getElementById('copyDecryptedMessageButton').style.display = 'block';
+                    toastr.success('Message decrypted successfully.');
+                } else {
+                    document.getElementById('decryptedMessage').textContent = 'Invalid cipher key or no message found.';
+                    document.getElementById('copyDecryptedMessageButton').style.display = 'none';
+                    toastr.error('Invalid cipher key or no message found.');
+                }
+            })
+            .catch(error => {
+                console.error('Error decrypting message:', error);
+                document.getElementById('decryptedMessage').textContent = 'Error decrypting message. Please try again.';
+                document.getElementById('copyDecryptedMessageButton').style.display = 'none';
+                toastr.error('Error decrypting message. Please try again.');
+            });
+    }
+
+    function copyCipherKey() 
+    {
+        const cipherKey = document.getElementById('generatedCipherKey').textContent;
+        copyToClipboard(cipherKey);
+        toastr.info('Cipher key copied to clipboard.');
+    }
+
+    function copyDecryptedMessage() {
+        const decryptedMessage = document.getElementById('decryptedMessage').textContent;
+        copyToClipboard(decryptedMessage);
+        toastr.info('Decrypted message copied to clipboard.');
+    }
+
+    function copyToClipboard(text) {
+        navigator.clipboard.writeText(text)
+            .then(() => {
+                toastr.success('Copied to clipboard!');
+            })
+            .catch(err => {
+                console.error('Failed to copy:', err);
+                toastr.error('Failed to copy to clipboard.');
+            });
+    }
+
+    document.addEventListener('DOMContentLoaded', function () {
+        $('#encryptModal').on('hidden.bs.modal', function () {
+            document.getElementById('encryptStep1').classList.remove('d-none');
+            document.getElementById('encryptStep2').classList.add('d-none');
+            document.getElementById('messageToEncrypt').value = '';
+        });
+
+        $('#decryptModal').on('hidden.bs.modal', function () {
+            document.getElementById('cipherKeyToDecrypt').value = '';
+            document.getElementById('decryptedMessage').textContent = '';
+            document.getElementById('copyDecryptedMessageButton').style.display = 'none';
+        });
+    });
+
+    function toggleDropdown() {
+        const dropdownMenu = document.querySelector('.navbar .user-info .dropdown-menu');
+        dropdownMenu.style.display = dropdownMenu.style.display === 'block' ? 'none' : 'block';
+    }
+
+    window.onclick = function(event) {
+        if (!event.target.matches('.user-info')) {
+            const dropdowns = document.getElementsByClassName("dropdown-menu");
+            for (let i = 0; i < dropdowns.length; i++) {
+                const openDropdown = dropdowns[i];
+                if (openDropdown.style.display === 'block') {
+                    openDropdown.style.display = 'none';
+                }
+            }
+        }
+    }
+</script>
 </body>
 
 </html>
